# info98_template_mlops

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  project_config.yml  pyproject.toml
data/: wine-quality-white-and-red.csv
notebooks/: 1_process_data_notebook.py  2_train_register_custom_model_notebook.py  3_save_predictions_notebook.py  template_mlops_wine_quality-0.1.1-py3-none-any.whl
pipelines/: cd.yml  ci.yml
scripts/: 1_process_data.py  2_train_register_custom_model.py  3_save_predictions.py
src/wine_quality/: config.py  data_processor.py
src/wine_quality/models/: custom_model.py
tests/: test_data_cleaning.py  test_data_processing.py
